# SpatioX

./: .gitignore  BUILD.md  CMakeLists.txt  DOCUMENTATION.md  MANIFEST.in  README.md  benchmark.py  documentation.txt  example.py  pyproject.toml  setup.py  test_basic.py
benchmarks/: benchmark1.txt
include/: record.hpp  record_store.hpp  spatial_index.hpp  spatio_index_core.hpp  temporal_index.hpp  utils.hpp
python/spatio/: _spatio_core.cp311-win_amd64.pyd
python/spatiox/: __init__.py
spatio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: bindings.cpp  record_store.cpp  spatial_index.cpp  spatio_index_core.cpp  temporal_index.cpp
