[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatio"
version = "0.1.0"
description = "Spatial-Temporal Index Engine"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pybind11>=2.6.0"]

[project.optional-dependencies]
dev = ["pytest"]
